--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.9.0
+  firebase_crashlytics: ^4.2.0
+  path_provider: ^2.1.5
+  fast_cached_network_image: ^1.2.9
+  flutter_hooks: ^0.20.5
+  hooks_riverpod: ^2.6.1
+  go_router: ^14.6.2
+  sizer: ^3.0.4
+  dio: ^5.7.0
+  google_fonts: ^6.2.1
+  flutter_initicon: ^3.0.1
+  shimmer: ^3.0.0
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
